2009-06-13
	* Added support for $to_bytes

2009-06-12
	* Added support for per-task I/O statistics - $top_io

2009-06-11
	* Added border_inner_margin and border_outer_margin config options, and
	deprecated border_margin

2009-06-10
	* Fix regression with loading of non-Xft fonts (sf.net #2804324)

2009-06-09
	* Fixed a regression which causes fonts to not be rendered properly with
	certain types of windows
	* Added format_human_readable option (sf.net #2803345, thanks Vincent)
	* Fix bug in comments within TEXT (where the line contains just '#')
	(sf.net #2803586), thanks Pavelo
	* Fix bug in $mails (sf.net #2802529, thanks Nikos)

2009-06-08
	* $battery_short can now also display F (full), N (not present),E (empty),
	U (unknown)
	* Fix problem that $battery and $battery_short displayed unknown on some
	systems when the battery wasn't unknown but full

2009-06-06
	* Add support for membar,swapbar,cpubar,fs_bar,fs_bar_free,battery_bar,
	execbar,execibar,lua_bar,entropy_bar,mpd_bar,apcupsd_loadbar and
	wireless_link_bar
	* Fix finding IP before first update

2009-06-04
	* Add entropy_perc printing the available entropy as percentage
	* Add read_tcp to print stuff from tcp-sockets

2009-05-24
	* Added fancy new 'temperature gradients' feature for graphs, via the -t
	switch at the end of graph arguments.
	* Allow ~/... and $HOME/... paths for more stuff.

2009-06-07
	* Conky 1.7.1 released

2009-05-31
	* Fix hostname resolution for mpd_host
	* Made sure that no X11 stuff is in the binary with --disable-X11

2009-05-19
	* Added inotify support to reload the config when modified automatically
	on systems that support it
	* Added inotify support for reloading Lua scripts automagically

2009-05-17
	* Added support for the Lua programming language
	* Added support for rending images by way of Imlib2
	* Patch to fix rounding error with CPU values (thanks Filipe)
	* Added support for execbar without X

2009-05-16