@@ -52,7 +52,7 @@ void llua_load(const char *script)
 		ERR("llua_load: %s", lua_tostring(lua_L, -1));
 		lua_pop(lua_L, 1);
 #ifdef HAVE_SYS_INOTIFY_H
-	} else if (!llua_block_notify && inotify_fd) {
+	} else if (!llua_block_notify && inotify_fd != -1) {
 		llua_append_notify(script);
 #endif /* HAVE_SYS_INOTIFY_H */
 	}
